Create RuniquePasswordTextField composable
RuniquePasswordTextField composable created and added to
Register screen

--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="example_email">your.email@example.com</string>
     <string name="email">Email</string>
     <string name="must_be_a_valid_email">Must be a vaild email</string>
+    <string name="password">Password</string>
 </resources>
