--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="contains_lowercase_character">Contains lowercase character</string>
     <string name="contains_uppercase_character">Contains uppercase character</string>
     <string name="register">Register</string>
+    <string name="error_email_exists">User with this email already exists</string>
+    <string name="registration_successful">"Registration successful! "</string>
 </resources>
