--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="register">Register</string>
     <string name="error_email_exists">User with this email already exists</string>
     <string name="registration_successful">"Registration successful! "</string>
+    <string name="hi_there">Hi there!</string>
+    <string name="runique_welcome_text">Welcome to your ultimate running companion!</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="youre_logged_in">You\'re logged in</string>
 </resources>
