--- a/run/presentation/src/main/res/values/strings.xml
+++ b/run/presentation/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="location_rationale">In order to track your location this app needs your permission</string>
     <string name="notification_rationale">In order to display the current time as a notification this app needs your permission</string>
     <string name="okay">Okay</string>
+    <string name="running_paused">Running is paused</string>
+    <string name="resume_or_finish_run">Do you want to resume or finish the workout</string>
+    <string name="resume">Resume</string>
+    <string name="finish">Finish</string>
 </resources>
