--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Runique</string>
     <string name="title_analytics_feature">Analytics</string>
+    <string name="couldnt_load_module">Couldn\'t load module</string>
+    <string name="installation_failed">Unfortunately installation failed. Please try again later</string>
+    <string name="analytics_installed">Analytics successfully installed</string>
+    <string name="installing_module">Installing module</string>
 </resources>
