--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="youre_logged_in">You\'re logged in</string>
     <string name="error_email_password_incorrect">Email or password is incorrect</string>
+    <string name="error_user_already_exists">User with this email already exists</string>
+    <string name="error_unknown_error">Something went wrong. Please try again later</string>
 </resources>
